[package]
name = "ipcow" 
version = "0.1.0"
edition = "2021"

[lib]
name = "ipcow"
path = "src/lib.rs"

[[bin]]
name = "ipcow"
path = "src/main.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
ipnetwork = "*"
itertools = "*"
futures = "*"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "*"
async-std = { version = "1.0", features = ["attributes"] }

[[bench]]
name = "port_scanner_bench"
harness = false
